# DECAF

./: .travis.yml  README.md
DroidScope/qemu/: Android.mk  CHANGES.TXT  CleanSpec.mk  INSTALL  Makefile  Makefile.android  Makefile.common  Makefile.target  README  aio-android.c  android-configure.sh  android-configure.sh_old  android-rebuild.sh  android-trace.h  android-trace_common.h  arch_init.c  arm-semi.c  block.c  buffered_file.c  charpipe.c  console.c  console.h  cpu-all.h  cpu-common.h  cpu-defs.h  cpu-exec.c  cpus.c  cpus.h  disas.c  dynlink-static.c  dynlink.h  exec-all.h  exec.c  gdbstub.c  gen-charmap.py  gen-skin.py  hax.h  host-defs.h  input.c  iolooper-select.c  (+74 more)
decaf/: .gitignore  AUTHOR  COPYING_DECAF  DECAF_CHANGELOG  INSTALL  Makefile  Makefile.objs  Makefile.target  README  acl.c  acl.h  aes.h  arch_init.h  balloon.h  bitmap.h  bitops.h  block.c  block.h  block_int.h  blockdev.c  blockdev.h  bswap.h  config-all-devices.mak  config-host.ld  config-host.mak  config.sh  configure  cpu-all.h  cpu-common.h  cpu-defs.h  cpu-exec.c  cpus.c  def-helper.h  exec-all.h  exec.c  hmp-commands.hx  hmp.c  hmp.h  kvm-all.c  memory-access.c  (+15 more)
decaf/arm-softmmu/: Makefile  config-devices.mak  config-devices.mak.d  config-target.mak
decaf/documents/: Automation.md  Installation.md  Interfaces.md  Introduction.md  Plugin_sample.md  StartUp.md  Tutorials.md
decaf/fpu/: softfloat.h
decaf/hw/: hw.h  ne2000.c  ps2.c
decaf/i386-softmmu/: config-devices.mak  config-devices.mak.d  config-target.mak
decaf/libdis/: Makefile  config.mak
decaf/libhw32/: config.mak
decaf/libhw64/: Makefile  config.mak
decaf/libuser/: Makefile
decaf/linux-headers/: asm
decaf/mips-softmmu/: config-devices.mak  config-devices.mak.d  (+1 more)
decaf/shared/llconf/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  llconf.pc.in
decaf/shared/llconf/debian/: Makefile.am  Makefile.in  README.Debian  changelog  control  copyright  docs  libllconf-dev.install  libllconf0.install  llconf.install  rules  shlibs.local
decaf/shared/llconf/doc/: Makefile.am  Makefile.in  doxygen.conf
decaf/shared/llconf/examples/: Makefile.am  Makefile.in  example.c  wizard
decaf/shared/llconf/examples/etc/: hosts  interfaces  resolv.conf
decaf/shared/llconf/src/: Makefile.am  Makefile.in
decaf/shared/llconf/src/parsers/: Makefile.am  Makefile.in  allmodules.c  allmodules.h  conserver.c  conserver.h  cron.c  cron.h  cyconf.c  cyconf.h  dhcp.c  dhcp.h  dhcp_leases.c  dhcp_leases.h  file.c  file.h  funcexpr.c  funcexpr.h  ifupdown.c  ifupdown.h  iproute.c  iproute.h  ipsec.c  ipsec.h  iptables.c  iptables.h  mgetty.c  mgetty.h  mkallmodules  options.c  options.h  pair.c  pair.h  ppp.c  ppp.h  properties.c  properties.h  pslave.c  pslave.h  python.c  (+15 more)
docker/: Dockerfile  README.md
docs/: transition-new.eps
(+1352 files in other folders)
